cambios de animacion

--- a/InfiniteHole.html
+++ b/InfiniteHole.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>spiral</title>
+    <title>infinite zoom hole</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-    <meta itemprop="name" content="spiral">
+    <meta itemprop="name" content="infinite zoom hole">
     <meta itemprop="description" content="made with cables">
-    <meta itemprop="image" content="screenshot.png">
-    <meta name="description" content="made with cables" />
+
 
     <style>
         body {
@@ -61,7 +60,7 @@
 
 
     <libs/>
-    <script type="text/javascript" src="js3/patch.js" async></script>
+    <script type="text/javascript" src="js2/patch.js" async></script>
     <corelibs/>
 
     <script>
