--- a/Psyco.html
+++ b/Psyco.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>new project</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-    <meta itemprop="name" content="projection psyco">
-    <meta itemprop="description" content="psyco1">
-    <meta name="description" content="cablesgl animacion" />
+    <meta itemprop="name" content="new project">
+    <meta itemprop="description" content="made with cables">
+
 
     <style>
         body {
@@ -57,13 +57,10 @@
 
 <body>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
-    <footer>
 
-        <!-- we would greatly appreciate if you link cables somewhere on your site! and tell us your website! thanks <3 :) -->
-    </footer>
 
     <libs/>
-    <script type="text/javascript" src="js/patch.js" async></script>
+    <script type="text/javascript" src="js4/patch.js" async></script>
     <corelibs/>
 
     <script>
