--- a/Spiral.html
+++ b/Spiral.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>copy of mandala2 fbmnoise</title>
+    <title>copy of twist for optimized web2</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-    <meta itemprop="name" content="copy of mandala2 fbmnoise">
-    <meta itemprop="description" content="made with cables">
-    <meta itemprop="image" content="screenshot.png">
+    <meta itemprop="name" content="spiral">
+
     <meta name="description" content="made with cables" />
 
     <style>
@@ -61,7 +60,7 @@
 
 
     <libs/>
-    <script type="text/javascript" src="js4/patch.js" async></script>
+    <script type="text/javascript" src="js/patch.js" async></script>
     <corelibs/>
 
     <script>
