--- a/index.html
+++ b/index.html
@@ -87,10 +87,7 @@
                 <div class="containerParallax">
                     <div id="scene">
                                 
-                           <div class="layer iFrame2" data-depth="0.9">
-                                    <iframe src="indexcables2.html" class="iFrame"></iframe>
-                              </div>
-
+                        <div class="layer" data-depth="0.5"><img src="./img/fondoparallax3-min.png" alt=""></div>
                         <div class="layer" data-depth="0.6"><img src="./img/marco1-min.png" alt=""></div>
                         <div class="layer" data-depth="0.7"><img src="./img/marco2-min.png" alt=""></div>
                         <div class="layer" data-depth="0.8"><img src="./img/marco3-min.png" alt=""></div>
