--- a/pages/arte2.html
+++ b/pages/arte2.html
@@ -24,37 +24,13 @@
 
 
 
-    <!-- para bloquear el f12 -->
-    <!-- <script>
 
-        document.onkeydown = function (e) {
-            if (event.keyCode == 123) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0) || e.keyCode == 'i'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'C'.charCodeAt(0) || e.keyCode == 'c'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'J'.charCodeAt(0) || e.keyCode == 'j'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'U'.charCodeAt(0) || e.keyCode == 'u'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'S'.charCodeAt(0) || e.keyCode == 's'.charCodeAt(0))) {
-                return false;
-            }
-        }
-    </script> -->
 
 
 </head>
 
 <body class="bg-dark">
-    <!-- para bloqeuar click derecho -->
-    <!-- <body oncontextmenu="return false;"></body> -->
+
 
 
     <header>
@@ -70,7 +46,7 @@
                                 </div>
                                 <ul id="menuAnimation">
                                     <li style="--clr:#1535e7"><a href="../index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
-                                    <li style="--clr:#fc0859"><a href="arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                                    <li style="--clr:#fc0859"><a href="arte2.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
                                     <li style="--clr:#aa2aff"><a href="tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
                                     <li style="--clr:#59c2ff"><a href="bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
                                     <li style="--clr:#B3D883"><a href="contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
@@ -82,7 +58,7 @@
                     <div id="menu">
                         <ul class=" flex-wrap flex-S justify-content-around menuCenter " id="menuAnimation">
                             <li style="--clr:#1535e7"><a href="../index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
-                            <li style="--clr:#fc0859"><a href="arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                            <li style="--clr:#fc0859"><a href="arte2.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
                             <li style="--clr:#aa2aff"><a href="tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
                             <li style="--clr:#59c2ff"><a href="bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
                             <li style="--clr:#B3D883"><a href="contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
@@ -157,11 +133,11 @@
             <div class="row m-3 ">
                 <div class=" col-12 col-sm-6">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <img class="w-100 mb-4 rounded mixing1 " data-aos="fade-up" src="../img/spiral2.png" alt="">
+                        <img class="w-100 mb-4 rounded mixing1 " data-aos="fade-up" src="../img/spiral.jpg" alt="">
                     </a>
 
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-                        <img class="w-100 mb-4 rounded mixing2" data-aos="fade-up" src="../img/mandala.jpg" alt="">
+                        <img class="w-100 mb-4 rounded mixing2" data-aos="fade-up" src="../assets/mandala.jpg" alt="">
                     </a>
                 </div>
                 <div class=" col-12 col-sm-6">
@@ -169,7 +145,7 @@
                         <img class="w-100 mb-4 rounded mixing3" data-aos="fade-up" src="../img/sphere.jpg" alt="">
                     </a>
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                        <img class="w-100 mb-4 rounded mixing4" data-aos="fade-up" src="../img/spiral.jpg" alt="">
+                        <img class="w-100 mb-4 rounded mixing4" data-aos="fade-up" src="../img/kalei1.gif" alt="">
                     </a>
                 </div>
 
@@ -187,7 +163,7 @@
                     <div class="modal-content">
                         <section>
                             <div class="iFrame2">
-                                <iframe src="../indexSpiral.html" class="iFrame"></iframe>
+                                <iframe src="../Spiral.html" class="iFrame"></iframe>
                             </div>
                         </section>
                     </div>
@@ -200,7 +176,7 @@
                     <div class="modal-content">
                         <section>
                             <div class="iFrame2">
-                                <iframe src="../indexcables3.html" class="iFrame"></iframe>
+                                <iframe src="../InfiniteHole.html" class="iFrame"></iframe>
                             </div>
                         </section>
                     </div>
@@ -213,7 +189,7 @@
                     <div class="modal-content">
                         <section>
                             <div class="iFrame2">
-                                <iframe src="../indexCables1.html" class="iFrame"></iframe>
+                                <iframe src="../Psyco.html" class="iFrame"></iframe>
                             </div>
                         </section>
                     </div>
@@ -226,7 +202,7 @@
                     <div class="modal-content">
                         <section>
                             <div class="iFrame2">
-                                <iframe src="../indexcables2.html" class="iFrame"></iframe>
+                                <iframe src="../Mandala.html" class="iFrame"></iframe>
                             </div>
                         </section>
                     </div>
@@ -286,7 +262,7 @@
             <div class="col d-flex align-items-center justify-content-center ">
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
-                    <li><a href="arte.html">ARTE</a></li>
+                    <li><a href="arte2.html">ARTE</a></li>
                     <li><a href="tienda.html">TIENDA</a></li>
                 </ul>
             </div>
