--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -22,37 +22,10 @@
 
 
 
-    <!-- para bloquear el f12 -->
-    <!-- <script>
-
-        document.onkeydown = function (e) {
-            if (event.keyCode == 123) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0) || e.keyCode == 'i'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'C'.charCodeAt(0) || e.keyCode == 'c'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'J'.charCodeAt(0) || e.keyCode == 'j'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'U'.charCodeAt(0) || e.keyCode == 'u'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'S'.charCodeAt(0) || e.keyCode == 's'.charCodeAt(0))) {
-                return false;
-            }
-        }
-    </script> -->
-
 
 </head>
 
 <body class="bg-dark">
-    <!-- para bloqeuar click derecho -->
-    <!-- <body oncontextmenu="return false;"></body> -->
 
 
     <header>
@@ -68,7 +41,7 @@
                                 </div>
                                 <ul id="menuAnimation">
                                     <li style="--clr:#1535e7"><a href="../index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
-                                    <li style="--clr:#fc0859"><a href="arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                                    <li style="--clr:#fc0859"><a href="arte2.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
                                     <li style="--clr:#aa2aff"><a href="tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
                                     <li style="--clr:#59c2ff"><a href="bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
                                     <li style="--clr:#B3D883"><a href="contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
@@ -80,7 +53,7 @@
                     <div id="menu">
                         <ul class=" flex-wrap flex-S justify-content-around menuCenter " id="menuAnimation">
                             <li style="--clr:#1535e7"><a href="../index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
-                            <li style="--clr:#fc0859"><a href="arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                            <li style="--clr:#fc0859"><a href="arte2.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
                             <li style="--clr:#aa2aff"><a href="tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
                             <li style="--clr:#59c2ff"><a href="bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
                             <li style="--clr:#B3D883"><a href="contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
@@ -274,7 +247,7 @@
             <div class="col d-flex align-items-center justify-content-center ">
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
-                    <li><a href="arte.html">ARTE</a></li>
+                    <li><a href="arte2.html">ARTE</a></li>
                     <li><a href="tienda.html">TIENDA</a></li>
                 </ul>
             </div>
