--- a/Mandala.html
+++ b/Mandala.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>copy of twist3 beatiful</title>
+    <title>mandala optimized</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-    <meta itemprop="name" content="copy of twist3 beatiful">
+    <meta itemprop="name" content="mandala optimized">
     <meta itemprop="description" content="made with cables">
-    <meta itemprop="image" content="screenshot.png">
-    <meta name="description" content="made with cables" />
 
     <style>
         body {
@@ -58,13 +56,10 @@
 
 <body>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
-    <footer>
 
-        <!-- we would greatly appreciate if you link cables somewhere on your site! and tell us your website! thanks <3 :) -->
-    </footer>
 
     <libs/>
-    <script type="text/javascript" src="js2/patch.js" async></script>
+    <script type="text/javascript" src="js3/patch.js" async></script>
     <corelibs/>
 
     <script>
