--- a/pages/arte2.html
+++ b/pages/arte2.html
@@ -258,36 +258,32 @@
     <footer>
 
 
-        <section class="row g-0 justify-content-center align-items-center">
-            <div class="col d-flex align-items-center justify-content-center ">
+        <section class="row g-0 ">
+            <div class="col flex-S ">
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="arte2.html">ARTE</a></li>
                     <li><a href="tienda.html">TIENDA</a></li>
                 </ul>
             </div>
-            <div class="col d-flex flex-wrap align-items-center justify-content-center">
+            <div class="col flex-S flex-wrap ">
                 <div>
                     <div class="col mixing7"><img src="../img/zetaalphalogo2.png" width="100px" height="80%" id="logo">
                     </div>
                 </div>
 
             </div>
-
-            <div class="col g-0 d-flex align-items-center justify-content-center">
+            <div class="col flex-S ">
                 <ul>
                     <li><a href="bio.html">BIO</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
-                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
+                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
+                        class="bi bi-youtube fa-2x"></i></a>
                     </li>
-                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-youtube fa-2x"></i></a>
-                    </li>
+                    <li></li>
 
                 </ul>
             </div>
-        </section>
-        <section>
-
         </section>
 
     </footer>
