--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         A traves de la programacion encuentro plasmar las visiones e ideas
                     </p>
                     <div>
-                        <a href="./pages/arte.html">Ver Mas</a>
+                        <a href="./pages/arte2.html">Ver Mas</a>
                     </div>
                 </div>
 
@@ -191,10 +191,9 @@
             <div class="col flex-S">
                 <div class="contactoZ arteZ">
                     <h2>CONTACTO</h2>
-                    <p>Para consultas aqui</p>
-                    <i class="bi bi-envelope instSize"></i>
-
-                    <p>massi.laplata@gmail.com</p>
+                    <p>Escribime tu Mensaje</p>
+                    <a href="./pages/contacto.html"><i class="bi bi-envelope instSize"></i></a>
+                    <p>Seguime en Instagram</p>
                     <a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram instSize"></i></a>
                     <p>@zetaintrip</p>
 
@@ -226,14 +225,14 @@
                 </div>
 
             </div>
-            <div class="col g-0 flex-s ">
+            <div class="col flex-S ">
                 <ul>
                     <li><a href="./pages/bio.html">BIO</a></li>
                     <li><a href="./pages/contacto.html">CONTACTO</a></li>
-                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
+                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
+                        class="bi bi-youtube fa-2x"></i></a>
                     </li>
-                    <li><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
-                                class="bi bi-youtube fa-2x"></i></a></li>
+                    <li></li>
 
                 </ul>
             </div>
