--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -123,7 +123,7 @@
 
         <section class="row g-0 bg-light flex-S tiendaZ">
             <div class="col-12 col-sm-6">
-                <div class="arteZ">
+                <div class="arteZ" id="cuadros">
                     <h1>CUADROS</h1>
                     <p>
                         Impresos en alta calidad
@@ -140,7 +140,7 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner textosCarru textCuadros">
                       <div class="carousel-item active">
-                        <img src="../img/mandala.jpg" class="d-block w-100" alt="...">
+                        <img src="../assets/mandala.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-md-block  ">
                             <h5>Mandala AguaMarina</h5>
                             <p>Aumento de la consciencia y relajacion</p>
@@ -182,7 +182,7 @@
 
         <section class="row g-0 bg-light flex-S tiendaZ">
             <div class="col-12 col-sm-6 order-0 order-sm-1">
-                <div class="arteZ">
+                <div class="arteZ" id="joyas">
                     <h1>JOYAS</h1>
                     <p>
                         Metales Preciosos y Piedras naturales
@@ -205,6 +205,14 @@
                           </div>
                       </div>
                       <div class="carousel-item">
+                        <img src="../img/brazaleteVikingPerlaNegra.jpg"  class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block  text-start">
+                            <h5>Brazalete Viking Perla Negra</h5>
+                            <p>Dorado Guerrero Equilibrado</p>
+                            <a href="">AÑADIR AL CARRITO</a>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
                         <img src="../img/modularpieza1icosaed_j53Pr.jpg" class="d-block w-100" alt="icosaedro">
                         <div class="carousel-caption d-md-block text-start ">
                             <h5>Icosaedro</h5>
@@ -220,6 +228,7 @@
                             <a href="">AÑADIR AL CARRITO</a>
                           </div>
                       </div>
+
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -243,35 +252,35 @@
     <footer>
 
 
-        <section class="row g-0 justify-content-center align-items-center">
-            <div class="col d-flex align-items-center justify-content-center ">
+        <section class="row g-0 ">
+            <div class="col flex-S ">
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="arte2.html">ARTE</a></li>
                     <li><a href="tienda.html">TIENDA</a></li>
                 </ul>
             </div>
-            <div class="col d-flex flex-wrap align-items-center justify-content-center">
-                <div >
-                    <div class="col mixing7"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
+            <div class="col flex-S flex-wrap ">
+                <div>
+                    <div class="col mixing7"><img src="../img/zetaalphalogo2.png" width="100px" height="80%" id="logo">
+                    </div>
                 </div>
 
             </div>
-            <div class="col g-0 d-flex align-items-center justify-content-center">
+            <div class="col flex-S ">
                 <ul>
                     <li><a href="bio.html">BIO</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
-                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
-                        </li>
-                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i
-                                    class="bi bi-youtube fa-2x"></i></a></li>
-                    
+                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
+                        class="bi bi-youtube fa-2x"></i></a>
+                    </li>
+                    <li></li>
+
                 </ul>
             </div>
         </section>
 
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
