CORRECCION DE LOGO

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -81,7 +81,7 @@
 
                 <div class="col-5 d-flex flex-wrap justify-content-center">
                     <div id="register">
-                        <i class="bi bi-person-circle loginPerfil"></i>
+                        <i class="bi bi-person-circle listamenu"></i>
                         <a href="#">LOGIN</a>
                     </div>
                 </div>
