--- a/pages/arte2.html
+++ b/pages/arte2.html
@@ -74,7 +74,7 @@
 
                 <div class="col-5 d-flex flex-wrap justify-content-center">
                     <div id="register">
-                        <i class="bi bi-person-circle loginPerfil"></i>
+                        <i class="bi bi-person-circle listamenu"></i>
                         <a href="#">LOGIN</a>
                     </div>
                 </div>
@@ -129,6 +129,7 @@
         <section>
             <div class="bg-dark animacionText text-light m-4">
                 <h1>ANIMACIONES WEB</h1>
+                <p>GENERADAS EN TIEMPO REAL</p>
             </div>
             <div class="row m-3 ">
 
