preparando la api

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </section>
 
 
-        <section class="row g-0 arteZ tiendaZ bg-dark">
+        <!-- <section class="row g-0 arteZ tiendaZ bg-dark">
 
 
             <div class=" card-group">
@@ -183,10 +183,10 @@
             </div>
 
 
-        </section>
+        </section> -->
 
 
-        <section class="bg-light">
+        <section class=" text-light">
 
             <div class="col flex-S">
                 <div class="contactoZ arteZ">
@@ -196,20 +196,11 @@
                     <p>Seguime en Instagram</p>
                     <a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram instSize"></i></a>
                     <p>@zetaintrip</p>
-
                 </div>
-
             </div>
-
         </section>
-
-
-
     </main>
-
     <footer>
-
-
         <section class="row g-0 ">
             <div class="col flex-S ">
                 <ul>
