--- a/pages/arte2.html
+++ b/pages/arte2.html
@@ -130,6 +130,7 @@
             <div class="bg-dark animacionText text-light m-4">
                 <h1>ANIMACIONES WEB</h1>
                 <p>GENERADAS EN TIEMPO REAL</p>
+                <p>(dale click)</p>
             </div>
             <div class="row m-3 ">
 
@@ -221,7 +222,7 @@
                         REALIDAD VIRTUAL DESARROLLADA EN BLENDER
                     </p>
                     <div>
-                        <a href="https://www.youtube.com/user/MaxiCrows/videos" target="_blank">Ver Mas</a>
+                        <a class="hoverA" href="https://www.youtube.com/user/MaxiCrows/videos" target="_blank">Ir a Youtube</a>
                     </div>
 
                 </div>
@@ -234,7 +235,7 @@
             </div>
 
         </section>
-        <section class="row g-3 m-3  bg-dark text-light flex-S ">
+        <section class="row g-3 m-4  bg-dark text-light flex-S ">
 
 
             <div class=" col-12 col-sm-6 order-1 order-sm-0">
@@ -246,11 +247,40 @@
                     <p>
                         CONTENIDO EXCLUSIVO ESTUDIOS AUDIOVISUALES
                     </p>
+                    <a class="hoverA" href="https://www.instagram.com/zetatrip/?hl=es" target="_blank">Ir a Instagram</a>
 
                 </div>
 
 
             </div>
+        </section>
+        <section class="row g-4 mx-4  bg-dark text-light flex-S ">
+            <div class="col-12 col-sm-6 ">
+                <div class="iframesText">
+                    <h1>DESARROLLO WEB</h1>
+                    <p>
+                        GITHUB repo
+                    </p>
+                    <a class="hoverA"href="https://github.com/maxipehtml?tab=repositories" target="_blank">Ir a Github</a>
+                    <p>
+
+                    </p>
+                    <p>
+                        Linkedin
+                    </p>
+                    <a class="hoverA" href="https://www.linkedin.com/in/maximiliano-pereira-3b5124141/" target="_blank">Ir a Linkedin</a>
+                    <p></p>
+                    <img src="https://drive.google.com/uc?export=view&id=1--GCMeZGJjELzQ1ouQ1UMr-vNzHwgGQu" alt="">
+                </div>
+
+
+            </div>
+
+            <div class=" col-12 col-sm-6">
+               
+                
+            </div>
+
         </section>
 
 
