--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -104,7 +104,7 @@
                     <div class="mb-6">
                         <h2>CONTACTO</h2>
                     </div>
-                    <div class="mb-5">Para Consultas Aqui</div>
+                    <!-- <div class="mb-5">Para Consultas Aqui</div>
                     <form action="">
 
                         <div>
@@ -136,7 +136,7 @@
 
 
 
-                </div>
+                </div> -->
             </div>
 
 
