--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -87,9 +87,8 @@
     <main class="container-fluid px-lg-4 px-md-3 px-0">
 
 
-
         <section class="row g-0 arteZ tiendaZ bg-dark">
-
+           
 
             <div class=" card-group">
                 <div class="col-12 col-sm-4 card mixing5" data-aos="fade-left">
@@ -104,7 +103,7 @@
 
                         <h1>TIENDA</h1>
 
-
+                    <p>EN CONSTRUCCION</p>
                     <p>Explora todos los productos</p>
                 </div>
 
