corregi el instagram

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                     <p>Escribime tu Mensaje</p>
                     <a href="./pages/contacto.html"><i class="bi bi-envelope instSize"></i></a>
                     <p>Seguime en Instagram</p>
-                    <a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram instSize"></i></a>
-                    <p>@zetaintrip</p>
+                    <a href="https://www.instagram.com/zetatrip/?hl=es"><i class="bi bi-instagram instSize"></i></a>
+                    <p>@zetatrip</p>
                 </div>
             </div>
         </section>
@@ -220,7 +220,7 @@
                 <ul>
                     <li><a href="./pages/bio.html">BIO</a></li>
                     <li><a href="./pages/contacto.html">CONTACTO</a></li>
-                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
+                    <li><a href="https://www.instagram.com/zetatrip/?hl=es"><i class="bi bi-instagram"></i></a><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
                         class="bi bi-youtube fa-2x"></i></a>
                     </li>
                     <li></li>
