--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -152,8 +152,8 @@
                     <i class="bi bi-envelope instSize"></i>
 
                     <p>massi.laplata@gmail.com</p>
-                    <a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram instSize"></i></a>
-                    <p>@zetaintrip</p>
+                    <a href="https://www.instagram.com/zetatrip/?hl=es"><i class="bi bi-instagram instSize"></i></a>
+                    <p>@zetatrip</p>
 
                 </div>
 
@@ -186,7 +186,7 @@
                 <ul>
                     <li><a href="bio.html">BIO</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
-                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
+                    <li><a href="https://www.instagram.com/zetatrip/?hl=es"><i class="bi bi-instagram"></i></a><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
                         class="bi bi-youtube fa-2x"></i></a>
                     </li>
                     <li></li>
